# magnetic-calibration-thesis

./: .gitignore  README.md
android/: .gitignore  gradle.properties  settings.gradle
android/app/: .gitignore  CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/html/: bundle.js  index.html
android/app/src/main/cpp/: jni.cpp
android/app/src/main/java/at/stefl/magnetics/: Collector.java  CollectorListener.java  MainActivity.java
android/app/src/main/java/at/stefl/magnetics/core/: AndroidPlatform.java  NativeTask.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
core/: CMakeLists.txt
core/cli/: CMakeLists.txt  copy_recording.cpp  evaluation.cpp  recording_meta.cpp  tu_replayer.cpp
core/magnetics/: CMakeLists.txt
core/magnetics/include/indoors/magnetics/: calibration.h  compass.h  filter_task.h  gl_util.h  hard_iron.h  live_demo_filter.h  live_demo_task.h  magnetics_filter.h  magneto_sphere.h  moving_average.h  orientation_filter.h  player_task.h  recorder_task.h  renderer.h  task.h  total_rotation.h  web_server.h
core/magnetics/src/: calibration.cpp  compass.cpp  filter_task.cpp  gl_util.cpp  hard_iron.cpp  live_demo_filter.cpp  live_demo_task.cpp  magnetics_filter.cpp  magneto_sphere.cpp  moving_average.cpp  orientation_filter.cpp  player_task.cpp  recorder_task.cpp  task.cpp  total_rotation.cpp  web_server.cpp
core/pipeline/: CMakeLists.txt
core/pipeline/include/indoors/pipeline/: buffer.h  csv.h  data_frame.h  definitions.h  event.h  file.h  http.h  looper.h  message.h  node.h  platform.h  protocol.h  series_buffer.h  synchronizer.h  worker.h
core/pipeline/src/: csv.cpp  definitions.cpp  file.cpp  http.cpp  looper.cpp  node.cpp  platform.cpp  protocol.cpp  synchronizer.cpp  worker.cpp
core/protocol/: CMakeLists.txt
core/protocol/src/indoors/pipeline/protocol/: message.pb.cc  message.pb.h
core/test/: CMakeLists.txt  buffer_test.cpp  csv_test.cpp  http_test.cpp  live_demo_task_test.cpp  magneto_sphere_test.cpp  moving_average_test.cpp  opengl_test.cpp  orientation_filter_test.cpp  protocol_test.cpp  recorder_player_test.cpp  series_buffer_test.cpp  synchronizer_test.cpp
javascript/: .gitignore  package.json  webpack.config.js
javascript/src/: convergence.js  cube.js  distributor.js  evaluation.js  heading.js  index.js  live_demo.js  plot.js  position.js  recording.js  scatter.js  scatter2d.js  scatter3d.js
protocol/: generate.sh
protocol/indoors/pipeline/protocol/: event.proto  message.proto
python/: evaluation.py  recording.py
thesis/: Makefile  README.md  TODO.txt  glossary.tex  header.tex  references.bib  thesis.tex  titelblatt.tex  titlepage.tex
thesis/chapters/: 00_abstract.tex  00_acknowledgements.tex  00_kurzfassung.tex  01_introduction.tex  02_background.tex  03_problem.tex  04_particle_filter.tex  05_implementation.tex  06_evaluation.tex  07_conclusion.tex  07_conclusions.tex  08_outlook.tex  99_recycle_bin.tex
