add_library(magnetics STATIC
        src/compass.cpp
        src/gl_util.cpp
        src/hard_iron.cpp
        src/magneto_sphere.cpp
        src/moving_average.cpp
        src/orientation_filter.cpp
        src/task.cpp
        src/web_server.cpp
        )
target_include_directories(magnetics
        PUBLIC
        include
        PRIVATE
        ${Boost_INCLUDE_DIRS}
        )
target_link_libraries(magnetics
        PUBLIC
        pipeline
        glm
        eigen
        )
